--- a/new/css/src/pag/join.styl
+++ b/new/css/src/pag/join.styl
@@ -10,7 +10,7 @@
 
 	input
 		background-color white
-		border none
+		border 1px solid transparent
 		border-radius 4px
 		padding 10px 15px
 		transition box-shadow 300ms linear
