--- a/new/css/main.css
+++ b/new/css/main.css
@@ -3,14 +3,11 @@ body {
   font-family: 'Quicksand', sans-serif;
   -webkit-transition: background-color 800ms linear;
   -moz-transition: background-color 800ms linear;
-  -o-transition: background-color 800ms linear;
-  -ms-transition: background-color 800ms linear;
   transition: background-color 800ms linear;
 }
 body.no-select {
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 }
 section > div {
@@ -18,19 +15,17 @@ section > div {
   position: absolute;
   top: 50%;
   margin-left: -105px;
-  margin-top: -100px;
   width: 210px;
 }
 section > div.error {
   -webkit-animation: error 160ms linear 100ms 4 alternate;
   -moz-animation: error 160ms linear 100ms 4 alternate;
-  -o-animation: error 160ms linear 100ms 4 alternate;
-  -ms-animation: error 160ms linear 100ms 4 alternate;
   animation: error 160ms linear 100ms 4 alternate;
 }
 section > div.error input {
   border: 1px solid #f00;
   -webkit-box-shadow: 0px 0px 5px #f00;
+  -moz-box-shadow: 0px 0px 5px #f00;
   box-shadow: 0px 0px 5px #f00;
 }
 section > div .button {
@@ -46,27 +41,24 @@ section span {
 .main {
   -webkit-transition: opacity 800ms linear;
   -moz-transition: opacity 800ms linear;
-  -o-transition: opacity 800ms linear;
-  -ms-transition: opacity 800ms linear;
   transition: opacity 800ms linear;
 }
 .hide {
   opacity: 0;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  filter: alpha(opacity=0);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
 }
 .ball {
   background-color: #d8ffb4;
   -webkit-box-shadow: 0 0 0 4px #fff, 0 0 0 8px #d8ffb4;
+  -moz-box-shadow: 0 0 0 4px #fff, 0 0 0 8px #d8ffb4;
   box-shadow: 0 0 0 4px #fff, 0 0 0 8px #d8ffb4;
   -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
   border-radius: 40px;
   height: 40px;
   position: absolute;
   -webkit-transition: box-shadow 800ms linear;
   -moz-transition: box-shadow 800ms linear;
-  -o-transition: box-shadow 800ms linear;
-  -ms-transition: box-shadow 800ms linear;
   transition: box-shadow 800ms linear;
   width: 40px;
   z-index: 9999;
@@ -189,26 +181,27 @@ section span {
 }
 .intro .ball {
   -webkit-box-shadow: 0 0 0 4px #ff7600, 0 0 0 8px #d8ffb4;
+  -moz-box-shadow: 0 0 0 4px #ff7600, 0 0 0 8px #d8ffb4;
   box-shadow: 0 0 0 4px #ff7600, 0 0 0 8px #d8ffb4;
 }
+.welcome section div {
+  margin-top: -32px;
+}
 .welcome input {
-  -webkit-box-shadow: 0 0 5px #ff7600;
-  box-shadow: 0 0 5px #ff7600;
-  border: 1px solid #ff7600;
+  border: 1px solid #43ae39;
+  -webkit-box-shadow: 0 0 5px #43ae39;
+  -moz-box-shadow: 0 0 5px #43ae39;
+  box-shadow: 0 0 5px #43ae39;
   -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
   border-radius: 4px;
   padding: 10px 15px;
   -webkit-transition: box-shadow 300ms linear;
   -moz-transition: box-shadow 300ms linear;
-  -o-transition: box-shadow 300ms linear;
-  -ms-transition: box-shadow 300ms linear;
   transition: box-shadow 300ms linear;
 }
 .welcome input:active,
 .welcome input:focus {
-  border: 1px solid #43ae39;
-  -webkit-box-shadow: 0 0 5px #43ae39;
-  box-shadow: 0 0 5px #43ae39;
   outline: none;
 }
 .join {
@@ -225,16 +218,16 @@ section span {
   background-color: #fff;
   border: 1px solid transparent;
   -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
   border-radius: 4px;
   padding: 10px 15px;
   -webkit-transition: box-shadow 300ms linear;
   -moz-transition: box-shadow 300ms linear;
-  -o-transition: box-shadow 300ms linear;
-  -ms-transition: box-shadow 300ms linear;
   transition: box-shadow 300ms linear;
 }
 .join .ball {
   -webkit-box-shadow: 0 0 0 4px #ff7600, 0 0 0 8px #d8ffb4;
+  -moz-box-shadow: 0 0 0 4px #ff7600, 0 0 0 8px #d8ffb4;
   box-shadow: 0 0 0 4px #ff7600, 0 0 0 8px #d8ffb4;
 }
 .waiting {
@@ -242,6 +235,7 @@ section span {
 }
 .waiting section div {
   text-align: center;
+  margin-top: -120px;
 }
 .waiting h2 {
   color: #fff;
@@ -251,5 +245,31 @@ section span {
 }
 .waiting .ball {
   -webkit-box-shadow: 0 0 0 4px #ffd300, 0 0 0 8px #d8ffb4;
+  -moz-box-shadow: 0 0 0 4px #ffd300, 0 0 0 8px #d8ffb4;
   box-shadow: 0 0 0 4px #ffd300, 0 0 0 8px #d8ffb4;
+}
+.game .no-active canvas {
+  opacity: 0.5;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+}
+.game .no-active section div {
+  -webkit-animation: error 160ms linear 100ms 8 alternate;
+  -moz-animation: error 160ms linear 100ms 8 alternate;
+  animation: error 160ms linear 100ms 8 alternate;
+  display: block;
+}
+.game section div {
+  background-color: #ff7600;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  color: #fff;
+  display: none;
+  text-align: center;
+  z-index: 9999;
+}
+.game canvas {
+  left: 0;
+  position: absolute;
+  top: 0;
 }
