--- a/new/css/src/pag/welcome.styl
+++ b/new/css/src/pag/welcome.styl
@@ -1,14 +1,17 @@
 .welcome
 
+	section div
+		margin-top -32px
+
 	input
-		box-shadow 0 0 5px color-base-1
-		border 1px solid color-base-1
+		border 1px solid color-base-3
+		box-shadow 0 0 5px color-base-3
+		//border 1px solid color-base-1
+		//box-shadow 0 0 5px color-base-1
 		border-radius 4px
 		padding 10px 15px
 		transition box-shadow 300ms linear
 
 		&:active
 		&:focus
-			border 1px solid color-base-3
-			box-shadow 0 0 5px color-base-3
 			outline none
