--- a/new/css/main.css
+++ b/new/css/main.css
@@ -288,6 +288,12 @@ section .popup input:focus {
   -webkit-box-shadow: 0 0 0 4px #ffd300, 0 0 0 8px #d8ffb4;
   box-shadow: 0 0 0 4px #ffd300, 0 0 0 8px #d8ffb4;
 }
+.game section {
+  height: 600px;
+  position: relative;
+  overflow: hidden;
+  width: 1024px;
+}
 .game section .player_bear,
 .game section .player_bunny {
   position: absolute;
@@ -323,19 +329,23 @@ section .popup input:focus {
   -ms-user-select: none;
   user-select: none;
   width: 100%;
+  z-index: 9999;
 /*span:nth-child(2)
 			float right*/
 }
 .game .user-stats.player {
-  bottom: 0;
-}
-.game .user-stats.enemy {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
   top: 0;
+}
+.game .user-stats.enemy {
+  bottom: 0;
+}
+.game .user-stats span {
+  text-transform: uppercase;
 }
 .game .user-stats span:nth-child(1) {
   font-size: 5em;
@@ -363,6 +373,11 @@ section .popup input:focus {
   display: none;
   text-align: center;
   z-index: 9999;
+}
+.game #canvas {
+  left: 0;
+  position: absolute;
+  top: 0;
 }
 .profile {
   background-color: #d7576c;
@@ -403,7 +418,7 @@ section .popup input:focus {
   box-sizing: border-box;
   padding: 10px 20px;
   text-align: center;
-  max-width: 1024px;
+  width: 1024px;
 }
 .profile .badges .badge {
   display: inline-block;
@@ -436,6 +451,7 @@ section .popup input:focus {
   opacity: 0.2;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
   filter: alpha(opacity=20);
+  pointer-events: none;
 }
 .profile .badges .badge.active .back {
   z-index: 1000;
@@ -491,11 +507,11 @@ section .popup input:focus {
   text-decoration: underline;
 }
 .profile .badges .badge .back {
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.6);
   -webkit-border-radius: 110px;
   border-radius: 110px;
   padding: 0 30px;
-  padding-top: 40px;
+  padding-top: 36px;
   height: 218px;
   width: 218px;
   -webkit-transform: rotateY(180deg);
@@ -516,6 +532,10 @@ section .popup input:focus {
 .profile .badges .badge .back h2 {
   color: #fff;
   text-transform: uppercase;
+}
+.profile .badges .badge .back p {
+  font-family: Arial;
+  font-size: 0.95em;
 }
 .profile .badges .badge .back a,
 .profile .badges .badge .back a:visited {
