--- a/new/css/src/pag/game.styl
+++ b/new/css/src/pag/game.styl
@@ -2,10 +2,10 @@
 
 	section
 		//border 1px solid gray
-		/*height 600px
+		height 600px
 		position relative
 		overflow hidden
-		width 1024px*/
+		width 1024px
 
 		.player_bear
 		.player_bunny
@@ -33,17 +33,21 @@
 		position absolute
 		user-select none
 		width 100%
+		z-index 9999
 
 		&.player
-			bottom 0
-
-		&.enemy
 			transform rotate(180deg)
 			top 0
 
-		span:nth-child(1)
-			font-size 5em
-			font-weight bold
+		&.enemy
+			bottom 0
+
+		span
+			text-transform uppercase
+
+			&:nth-child(1)
+				font-size 5em
+				font-weight bold
 
 		/*span:nth-child(2)
 			float right*/
@@ -65,7 +69,7 @@
 		text-align center
 		z-index 9999
 
-	/*#canvas
+	#canvas
 		left 0
 		position absolute
-		top 0*/
+		top 0
