--- a/new/css/src/pag/profile.styl
+++ b/new/css/src/pag/profile.styl
@@ -32,7 +32,7 @@
 		box-sizing border-box
 		padding 10px 20px
 		text-align center
-		max-width 1024px
+		width 1024px
 
 		.badge
 			display inline-block
@@ -48,6 +48,7 @@
 					//border-color #eee
 					transform rotateY(-180deg)
 					opacity .2
+					pointer-events none
 
 				.back
 					z-index 1000
@@ -91,14 +92,14 @@
 
 
 			.back
-				background-color rgba(0,0,0,.4)
+				background-color rgba(0,0,0,.6)
 				//border-radius 0 30px
 				//border 1px solid color-base-1
 				//border 1px solid rgba(255,255,255,.2)
 				//box-shadow 2px 2px 5px rgba(0,0,0,0.4)
 				border-radius 110px
 				padding 0 30px
-				padding-top 40px
+				padding-top 36px
 				height 218px
 				width 218px
 				transform rotateY(180deg)
@@ -112,6 +113,10 @@
 				h2
 					color white
 					text-transform uppercase
+
+				p
+					font-family Arial
+					font-size .95em
 
 				a
 				a:visited
