--- a/new/css/main.css
+++ b/new/css/main.css
@@ -323,11 +323,11 @@ section .popup input:focus {
   margin-left: -75px;
   margin-top: 0;
   text-align: center;
-  -webkit-transition: all 300ms linear;
-  -moz-transition: all 300ms linear;
-  -o-transition: all 300ms linear;
-  -ms-transition: all 300ms linear;
-  transition: all 300ms linear;
+  -webkit-transition: all 3 0ms linear;
+  -moz-transition: all 3 0ms linear;
+  -o-transition: all 3 0ms linear;
+  -ms-transition: all 3 0ms linear;
+  transition: all 3 0ms linear;
   width: 150px;
   z-index: 99999;
 }
@@ -400,6 +400,13 @@ section .popup input:focus {
   -ms-animation: error 160ms linear 100ms 8 alternate;
   animation: error 160ms linear 100ms 8 alternate;
   display: block;
+}
+.game .alert-gameover {
+  margin-top: -70px;
+}
+.game .alert-gameover li {
+  margin-bottom: 1em;
+  text-decoration: underline;
 }
 .game [class^="alert-"],
 .game [class*=" alert-"] {
