--- a/new/css/src/pag/game.styl
+++ b/new/css/src/pag/game.styl
@@ -32,7 +32,7 @@
 		margin-left -75px
 		margin-top 0
 		text-align center
-		transition all 300ms linear
+		transition all 3	00ms linear
 		width 150px
 		z-index 99999
 
@@ -81,6 +81,7 @@
 			animation error 160ms linear 100ms 8 alternate
 			display block
 
+
 	.finished
 		canvas
 			opacity .5
@@ -88,7 +89,15 @@
 
 		.alert-gameover
 			animation error 160ms linear 100ms 8 alternate
-			display block			
+			display block
+
+	.alert-gameover
+		margin-top -70px
+		li
+			margin-bottom 1em
+			text-decoration underline
+
+
 
 	[class^="alert-"]
 	[class*=" alert-"]
